--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,4 @@
-- siamo sicuri che le release e i tag vengano fatti solo sul branch main,
-e che seguano il flusso git che abbiamo scelto per il progetto??
-
-- come organizzare i todo di progetto?
-
+- quando aggiungi commenti non spiegare il come ma il perché
 
 - aggiungi guida nestjs
 
