docs: updated project TODO list

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,20 @@
-- quando aggiungi commenti non spiegare il come ma il perché
-
-- genera un documento report del progetto: analisi di quello che abbiamo fatto (log e copilot history),
-di come l'interazione con uno sviluppatore senior con conoscenze di dominio ha aiutato il vibe coding,
-di quelle che sarebbero state le tempistiche per implementare questo sistema senza tool AI (per tre seniority junior, middle,level sia in ore/sprint e storypoint)
-e in quanto tempo invece lo abbiamo realizzato.
-
- - validity end
-
 - gestione centrealizzata timezone e best practive
+
+- validity end
+
+- helper proper acid transaction and commit/release/rollback
+
+- users e auth
+
+- task Management
+
+- deploy produzione
+
+- docs learning domande tecniche
+
+- test remoti
+
+- IAC + CI/CD
 
 - division entities
 
@@ -15,14 +22,8 @@ e in quanto tempo invece lo abbiamo realizzato.
 
 - interoperabilità dei dati (modulo con libreria node-git)
 
-- helper proper acid transaction and commit/release/rollback
-
-- users e auth
-
 - sistema di filtri
 
 - aumentiamo il coverage
 
 - estensione KC
-
-- IAC + CI/CD
