feat(divisions): implement TDD-based divisions management system (task 1.1.1)
- Add comprehensive base entity architecture with dual identification system
- Implement Division entity with hierarchical structure and timezone management
- Create NestJS divisions resource with full CRUD operations
- Add comprehensive TDD test suite with 29+ test cases covering all scenarios
- Implement DTOs with validation for create, update, and query operations
- Add division repository with TypeORM integration
- Create division management service with business logic
- Add timezone and case conversion utility services
- Update Copilot instructions to enforce test-first development methodology
- Integrate with Swagger for API documentation

BREAKING CHANGE: Introduces new dual identification system for entities (uuid + code)

Implements complete TDD Red-Green-Refactor cycle:
- RED: Comprehensive test suite created first (divisions.controller.spec.ts)
- GREEN: Minimal implementation to make all tests pass
- Tests: 29 tests covering CRUD, validation, error handling, business logic

Files added/modified:
- Base entity architecture: base.entity.ts, master-base.entity.ts
- Division module: divisions.controller.ts, divisions.service.ts, divisions.module.ts
- Entity: division.entity.ts with hierarchical relationships
- DTOs: create/update/query DTOs with comprehensive validation
- Tests: Full TDD test suite with Given-When-Then pattern
- Utils: timezone-manager, case-converter, division-manager services
- Config: Enhanced Copilot instructions for TDD enforcement

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,13 @@
+FIXARE:
+    - coverage constraint su push in branch non main
+
+TESTARE:
+
 - gestione centrealizzata timezone e best practive
 
 - validity end
+
+--------------------------------------------------------------
 
 - helper proper acid transaction and commit/release/rollback
 
@@ -22,7 +29,7 @@
 
 - interoperabilità dei dati (modulo con libreria node-git)
 
-- sistema di filtri
+- sistema di filtri (AND + payload interface + like typeorm + fino a query dentro primo livello di relazione + tipi base gestiti + se una colonna è null e passo un valore la query deve essere null | quel valore, deve essere getito questo caso o strict solo quel valore)
 
 - aumentiamo il coverage
 
