chore: remove test file and install missing conventional-changelog-cli

--- a/docs/learning/labs/1.8_PROMISES_ASYC_AWAIT.md
+++ b/docs/learning/labs/1.8_PROMISES_ASYC_AWAIT.md
@@ -155,6 +155,345 @@ console.log('4'); // Sincrono
 // I microtask (Promise) hanno priorità sui macrotask (setTimeout)!
 ```
 
+### L'Event Loop di Node.js: Un Sistema Più Sofisticato
+
+Mentre il browser ha un Event Loop relativamente semplice, Node.js implementa un sistema molto più complesso e articolato. Questo è necessario perché Node.js deve gestire non solo operazioni asincrone semplici come timer, ma anche operazioni di I/O intensive come lettura di file, connessioni di rete e operazioni su database. Comprendere l'Event Loop di Node.js è fondamentale per scrivere applicazioni performanti e evitare problemi sottili che possono emergere in produzione.
+
+Il cuore dell'Event Loop di Node.js è basato su **libuv**, una libreria C++ che fornisce astrazioni cross-platform per operazioni asincrone. Questa architettura permette a Node.js di essere incredibilmente efficiente per applicazioni I/O-intensive, ma introduce anche complessità aggiuntive che dobbiamo comprendere.
+
+#### Architettura Completa dell'Event Loop di Node.js
+
+L'Event Loop di Node.js è organizzato in fasi distinte, ognuna con un scopo specifico e delle regole precise su quando e come vengono eseguite le callback. Immagina l'Event Loop come un grande stabilimento industriale con diverse stazioni di lavoro, ognuna specializzata in un tipo specifico di task:
+
+```
+   ┌───────────────────────────┐
+┌─>│           Timer           │  <- setTimeout, setInterval
+│  │  (callbacks scheduled     │
+│  │   by setTimeout and       │
+│  │   setInterval)            │
+│  └─────────────┬─────────────┘
+│  ┌─────────────▼─────────────┐
+│  │     Pending Callbacks     │  <- I/O callbacks deferred to next loop iteration
+│  │  (I/O callbacks deferred  │
+│  │   to next loop iteration) │
+│  └─────────────┬─────────────┘
+│  ┌─────────────▼─────────────┐
+│  │       Idle, Prepare       │  <- Used internally by Node.js
+│  │    (used internally       │
+│  │     only by Node.js)      │
+│  └─────────────┬─────────────┘      ┌───────────────┐
+│  ┌─────────────▼─────────────┐      │   incoming:   │
+│  │           Poll            │<─────┤  connections, │
+│  │  (fetch new I/O events;   │      │   data, etc.  │
+│  │   execute their callbacks)│      └───────────────┘
+│  └─────────────┬─────────────┘
+│  ┌─────────────▼─────────────┐
+│  │           Check           │  <- setImmediate callbacks
+│  │  (setImmediate callbacks) │
+│  │                           │
+│  └─────────────┬─────────────┘
+│  ┌─────────────▼─────────────┐
+└──┤      Close Callbacks      │  <- socket.on('close', ...)
+   │  (close event callbacks)  │
+   │                           │
+   └───────────────────────────┘
+
+   ┌─────────────────────────────────────────────────────────────┐
+   │                        MICROTASK QUEUES                     │
+   │                                                             │
+   │  ┌─────────────────┐    ┌─────────────────────────────────┐ │
+   │  │ Next Tick Queue │    │      Promise/Microtask Queue    │ │
+   │  │                 │    │                                 │ │
+   │  │ process.nextTick│    │ Promise.then, queueMicrotask    │ │
+   │  │   (highest      │    │        (normal priority)        │ │
+   │  │   priority)     │    │                                 │ │
+   │  └─────────────────┘    └─────────────────────────────────┘ │
+   └─────────────────────────────────────────────────────────────┘
+```
+
+#### Le Sei Fasi dell'Event Loop: Analisi Approfondita
+
+Ogni iterazione dell'Event Loop attraversa queste sei fasi in ordine sequenziale. È importante capire che Node.js esegue **completamente** una fase prima di passare alla successiva, ma con delle importanti eccezioni per i microtask che vedremo.
+
+**Fase 1: Timer Phase**
+
+```javascript
+// TIMER PHASE - Esegue callback di setTimeout e setInterval
+console.log('Script iniziato');
+
+setTimeout(() => {
+  console.log('Timer 1 - 0ms'); // Questo va nella Timer phase
+}, 0);
+
+setTimeout(() => {
+  console.log('Timer 2 - 10ms'); // Anche questo va nella Timer phase
+}, 10);
+
+// La Timer phase eseguirà tutti i timer scaduti prima di passare oltre
+```
+
+La Timer Phase mantiene una coda ordinata per tempo di scadenza. Node.js controlla se ci sono timer scaduti e esegue le loro callback. È importante notare che anche setTimeout con delay 0 non viene eseguito immediatamente, ma durante la prossima iterazione dell'Event Loop.
+
+**Fase 2: Pending Callbacks Phase**
+
+```javascript
+// PENDING CALLBACKS PHASE - Callback I/O differite dal ciclo precedente
+const fs = require('fs');
+
+fs.readFile('grande-file.txt', (err, data) => {
+  console.log('File letto completato');
+
+  // Se questa callback non può essere eseguita immediatamente
+  // nella Poll phase (per esempio per throttling), viene
+  // spostata nella Pending Callbacks phase del prossimo ciclo
+});
+```
+
+Questa fase gestisce callback di operazioni I/O che sono state differite per evitare che una singola iterazione dell'Event Loop diventi troppo lunga. È una forma di throttling interno per mantenere la responsiveness dell'applicazione.
+
+**Fase 3: Idle, Prepare Phase**
+
+```javascript
+// IDLE, PREPARE PHASE - Uso interno di Node.js
+// Normalmente non interagisci direttamente con questa fase
+// È usata per operazioni di housekeeping interne
+```
+
+Questa fase è utilizzata internamente da Node.js per preparare la prossima fase Poll. Non ci sono API pubbliche che permettono di schedularvi callback direttamente.
+
+**Fase 4: Poll Phase - Il Cuore dell'I/O**
+
+```javascript
+// POLL PHASE - Il cuore delle operazioni I/O
+const http = require('http');
+const fs = require('fs');
+
+// Queste operazioni vengono gestite nella Poll phase
+const server = http.createServer((req, res) => {
+  // Connessione HTTP in arrivo - Poll phase
+  console.log('Richiesta ricevuta');
+
+  fs.readFile('response.json', (err, data) => {
+    // Lettura file completata - Poll phase callback
+    console.log('File letto per risposta');
+    res.end(data);
+  });
+});
+
+server.listen(3000, () => {
+  console.log('Server in ascolto - Poll phase callback');
+});
+```
+
+La Poll Phase è la più complessa e importante. Ha due funzioni principali:
+
+- Calcola per quanto tempo dovrebbe bloccarsi e fare polling per I/O
+- Processa eventi nella poll queue
+
+Se la poll queue non è vuota, l'Event Loop itera attraverso la sua coda di callback eseguendole sincronamente finché la coda non si svuota o raggiunge il limite massimo dipendente dal sistema.
+
+**Fase 5: Check Phase - setImmediate**
+
+```javascript
+// CHECK PHASE - setImmediate callbacks
+const fs = require('fs');
+
+fs.readFile('config.json', () => {
+  console.log('File config letto - Poll phase');
+
+  setTimeout(() => {
+    console.log('Timer dopo readFile - Timer phase del PROSSIMO ciclo');
+  }, 0);
+
+  setImmediate(() => {
+    console.log('Immediate dopo readFile - Check phase di QUESTO ciclo');
+  });
+
+  // Output garantito:
+  // "File config letto - Poll phase"
+  // "Immediate dopo readFile - Check phase di QUESTO ciclo"
+  // "Timer dopo readFile - Timer phase del PROSSIMO ciclo"
+});
+```
+
+La Check Phase esegue callback schedulate da `setImmediate()`. `setImmediate()` è progettato per essere eseguito una volta completata la Poll Phase corrente. Questo lo rende particolarmente utile quando vuoi che qualcosa venga eseguito dopo le operazioni I/O correnti ma prima del prossimo ciclo dell'Event Loop.
+
+**Fase 6: Close Callbacks Phase**
+
+```javascript
+// CLOSE CALLBACKS PHASE - Cleanup e chiusura
+const net = require('net');
+
+const socket = new net.Socket();
+socket.connect(3000, 'localhost');
+
+socket.on('close', () => {
+  console.log('Socket chiuso - Close Callbacks phase');
+  // Cleanup delle risorse
+});
+
+socket.on('error', err => {
+  console.log('Errore socket:', err);
+  socket.destroy(); // Questo causerà l'evento 'close'
+});
+```
+
+Questa fase esegue callback di chiusura come `socket.on('close', ...)`. Se un socket o handle viene chiuso improvvisamente, l'evento 'close' verrà emesso in questa fase.
+
+#### Microtask e Next Tick: Le Code ad Alta Priorità
+
+Tra ogni fase dell'Event Loop, Node.js controlla due code speciali che hanno priorità più alta rispetto alle fasi normali:
+
+```javascript
+// Esempio completo per comprendere le priorità
+console.log('=== Inizio script ===');
+
+// Macrotask - Timer phase
+setTimeout(() => console.log('1. Timer 0ms'), 0);
+
+// Macrotask - Check phase
+setImmediate(() => console.log('2. Immediate'));
+
+// Microtask - Promise queue
+Promise.resolve().then(() => console.log('3. Promise'));
+
+// Microtask - Next tick queue (priorità più alta)
+process.nextTick(() => console.log('4. Next tick'));
+
+// Sincrono
+console.log('=== Fine script ===');
+
+// Output:
+// === Inizio script ===
+// === Fine script ===
+// 4. Next tick          <- Eseguito PRIMA di tutto il resto
+// 3. Promise             <- Poi i microtask normali
+// 2. Immediate           <- Poi Check phase (siamo dopo Poll phase vuota)
+// 1. Timer 0ms          <- Infine Timer phase del prossimo ciclo
+```
+
+**Next Tick Queue**: Ha la priorità più alta assoluta. `process.nextTick()` viene sempre eseguito prima di qualsiasi altra callback asincrona, anche prima dei microtask delle Promise.
+
+**Promise/Microtask Queue**: Ha priorità più alta rispetto alle fasi dell'Event Loop ma più bassa rispetto a Next Tick Queue.
+
+#### Caso di Studio Complesso: Orchestrazione con Tutte le Fasi
+
+Vediamo un esempio realistico che tocca tutte le parti dell'Event Loop:
+
+```javascript
+const fs = require('fs');
+const http = require('http');
+
+console.log('=== Applicazione avviata ===');
+
+// Timer phase - Monitoring periodico
+const monitoringInterval = setInterval(() => {
+  console.log(
+    `[Monitor] Memoria utilizzata: ${process.memoryUsage().heapUsed / 1024 / 1024} MB`,
+  );
+}, 5000);
+
+// Server HTTP - Poll phase per connessioni
+const server = http.createServer((req, res) => {
+  console.log(`[HTTP] Richiesta ricevuta: ${req.method} ${req.url}`);
+
+  // Lettura asincrona file - Poll phase
+  fs.readFile('./data.json', 'utf8', (err, data) => {
+    if (err) {
+      console.log('[FS] Errore lettura file');
+      res.writeHead(500);
+      res.end('Errore interno del server');
+      return;
+    }
+
+    console.log('[FS] File letto con successo');
+
+    // Next tick - Priorità massima
+    process.nextTick(() => {
+      console.log('[NextTick] Processing dati post-lettura');
+    });
+
+    // Promise - Microtask queue
+    Promise.resolve(data).then(processedData => {
+      console.log('[Promise] Dati processati');
+
+      // setImmediate - Check phase
+      setImmediate(() => {
+        console.log('[Immediate] Invio risposta programmato');
+        res.writeHead(200, { 'Content-Type': 'application/json' });
+        res.end(processedData);
+      });
+    });
+
+    // Timer per logging - Timer phase del prossimo ciclo
+    setTimeout(() => {
+      console.log('[Timer] Log differito della richiesta completata');
+    }, 0);
+  });
+});
+
+// Event listener per chiusura - Close callbacks phase
+server.on('close', () => {
+  console.log('[Close] Server HTTP chiuso');
+  clearInterval(monitoringInterval);
+});
+
+// Avvio server - Poll phase callback
+server.listen(3000, () => {
+  console.log('[Server] In ascolto sulla porta 3000');
+
+  // Simula una richiesta dopo l'avvio
+  setTimeout(() => {
+    console.log('[Timer] Simulazione richiesta test');
+
+    // Simula chiusura dopo test
+    setTimeout(() => {
+      server.close();
+    }, 10000);
+  }, 1000);
+});
+
+console.log('=== Setup completato ===');
+```
+
+Quando esegui questo codice, puoi osservare esattamente l'ordine di esecuzione e come le diverse fasi dell'Event Loop interagiscono tra loro. Ogni messaggio di log è etichettato con la fase corrispondente, permettendoti di tracciare il flusso completo dell'applicazione.
+
+#### Differenze Cruciali tra Browser e Node.js Event Loop
+
+È importante capire che l'Event Loop del browser e quello di Node.js hanno comportamenti diversi, specialmente per quanto riguarda i microtask:
+
+```javascript
+// Nel BROWSER questo comportamento:
+setTimeout(() => console.log('timer1'));
+Promise.resolve().then(() => console.log('promise1'));
+setTimeout(() => console.log('timer2'));
+Promise.resolve().then(() => console.log('promise2'));
+
+// Produce: promise1, promise2, timer1, timer2
+// I microtask hanno sempre priorità completa sui macrotask
+
+// In NODE.JS (versioni 11+) il comportamento è simile al browser
+// Ma nelle versioni precedenti era diverso:
+// timer1, timer2, promise1, promise2
+// Le fasi venivano completate prima di processare i microtask
+```
+
+Questa differenza storica è stata uno dei motivi per cui codice che funzionava perfettamente in un ambiente poteva comportarsi diversamente nell'altro. Node.js 11 ha allineato il comportamento con quello dei browser per ridurre questa fonte di confusione.
+
+#### Implicazioni Pratiche per lo Sviluppo
+
+Comprendere l'Event Loop di Node.js ti aiuta a:
+
+**Ottimizzare le Performance**: Sapendo quando vengono eseguite le diverse operazioni, puoi strutturare il codice per minimizzare il blocking dell'Event Loop.
+
+**Debugging Asincrono**: Quando il tuo codice non si comporta come aspettato, capire le fasi dell'Event Loop ti aiuta a identificare dove potrebbe essere il problema.
+
+**Evitare Race Conditions**: Conoscendo l'ordine di esecuzione, puoi strutturare il codice per evitare dipendenze problematiche tra operazioni asincrone.
+
+**Gestire la Backpressure**: Capire come Node.js gestisce le code ti aiuta a implementare meccanismi per evitare l'accumulo eccessivo di operazioni pending.
+
+Ora che hai una comprensione profonda dell'Event Loop di Node.js, sei pronto per apprezzare come Promises e async/await si integrano perfettamente in questo sistema complesso, fornendo astrazioni eleganti che semplificano drasticamente la gestione delle operazioni asincrone mantenendo tutta la potenza dell'architettura sottostante.
+
 ### Callback Functions: L'Era Pre-Promise
 
 Prima dell'avvento delle Promises, le callback erano l'unico modo per gestire operazioni asincrone. Comprendere le callback è essenziale perché molte API moderne sono costruite sopra di esse, e ti aiuterà ad apprezzare i vantaggi delle Promises.
